--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <section id="accordion-wrapper"></section>
 
-
     <!-- scripts -->
+    <script src="https://kit.fontawesome.com/150fbb0499.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/components/AccordionNode.js"></script>
     <script src="./js/constants/index.js"></script>
@@ -27,16 +27,15 @@
             const insertAccordions = (data) => {
                 const accordions = data.map((el, i) => AccordionNode(el, i + 1));
                 $("#accordion-wrapper").append(...accordions);
-                $(".accordion").children(".content").hide();
-                $(".accordion:first").children(".content").show();
+                $(".accordion:first").addClass('show');
             }
 
             const setAccordionToggleSlide = () => {
                 const accordionWrapper = $('#accordion-wrapper');
-                accordionWrapper.click(event => {
+                accordionWrapper.on("click", ".trigger", event => {
                     const accordion = $(event.target).parents('.accordion');
-                    accordion.children('.content').slideToggle();
-                    accordion.siblings('.accordion').children('.content').slideUp();
+                    accordion.toggleClass('show');
+                    accordion.siblings('.accordion').removeClass('show');
                 })
             }
 
@@ -46,7 +45,6 @@
                 insertAccordions(accordionData);
                 setAccordionToggleSlide();
             })
-
         })
     </script>
 </body>
